--- a/src/test/resources/FrameworkConfig.properties
+++ b/src/test/resources/FrameworkConfig.properties
@@ -10,3 +10,9 @@ skippedstepscreenshot=no
 
 #Toggle 'yes' or 'no' if you wish to have screenshots for failed test cases
 failedstepscreenshot=yes
+
+# Video Record
+video_record=yes
+
+#Wait for the current page to be completely loaded
+active_page_loaded=yes
