--- a/src/test/resources/FrameworkConfig.properties
+++ b/src/test/resources/FrameworkConfig.properties
@@ -11,8 +11,12 @@ skippedstepscreenshot=no
 #Toggle 'yes' or 'no' if you wish to have screenshots for failed test cases
 failedstepscreenshot=yes
 
-# Video Record
-video_record=yes
+#Toggle 'yes' or 'no' if you wish to have video recording for local test execution
+video_record=no
+
+#Toggle 'yes' or 'no' if you wish to have screenshots for local test execution
+takescreenshots=yes
 
 #Wait for the current page to be completely loaded
 active_page_loaded=yes
+
