--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,19 @@
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
+        <selenium.version>4.8.3</selenium.version>
+        <testng.version>7.7.1</testng.version>
+        <assertj.version>3.23.1</assertj.version>
+        <owner.version>1.0.12</owner.version>
+        <zerocell.version>0.5.1</zerocell.version>
+        <javafaker.version>1.0.2</javafaker.version>
+        <assertj-joda-time.version>2.2.0</assertj-joda-time.version>
+        <test-data-supplier.version>1.9.7</test-data-supplier.version>
+        <extentreports.version>5.0.9</extentreports.version>
+        <log4j.version>1.2.17</log4j.version>
+        <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
     </properties>
 
     <build>
@@ -18,7 +31,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${maven.compiler.version}</version>
                 <configuration>
                     <source>14</source>
                     <target>14</target>
@@ -27,7 +40,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>${maven.surefire.version}</version>
                 <configuration>
                     <suiteXmlFiles>testng.xml</suiteXmlFiles>
                 </configuration>
@@ -36,71 +49,61 @@
     </build>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.8.3</version>
+            <version>${selenium.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.testng/testng-->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.7.1</version>
+            <version>${testng.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.23.1</version>
+            <version>${assertj.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.aeonbits.owner/owner -->
         <dependency>
             <groupId>org.aeonbits.owner</groupId>
             <artifactId>owner</artifactId>
-            <version>1.0.12</version>
+            <version>${owner.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.creditdatamw.labs/zerocell-core -->
         <dependency>
             <groupId>com.creditdatamw.labs</groupId>
             <artifactId>zerocell-core</artifactId>
-            <version>0.5.1</version>
+            <version>${zerocell.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
+            <version>${javafaker.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-joda-time -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-joda-time</artifactId>
-            <version>2.2.0</version>
+            <version>${assertj-joda-time.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.github.sskorol</groupId>
             <artifactId>test-data-supplier</artifactId>
-            <version>1.9.7</version>
+            <version>${test-data-supplier.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>5.0.9</version>
+            <version>${extentreports.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.github.stephenc.monte/monte-screen-recorder -->
         <dependency>
             <groupId>com.github.stephenc.monte</groupId>
             <artifactId>monte-screen-recorder</artifactId>
-            <version>0.7.7.0</version>
+            <version>${monte-screen-recorder.version}</version>
         </dependency>
     </dependencies>
 </project>
