--- a/src/test/resources/FrameworkConfig.properties
+++ b/src/test/resources/FrameworkConfig.properties
@@ -1,22 +1,36 @@
 #Toggle 'yes' or 'no' if you wish to have dynamic reports everytime you run scripts
 #or if you wish to override old reports with new generated.
 overridereports=yes
-
 #Toggle 'yes' or 'no' if you wish to have screenshots for passed test cases
 passedstepscreenshot=yes
-
 #Toggle 'yes' or 'no' if you wish to have screenshots for skipped test cases
 skippedstepscreenshot=no
-
 #Toggle 'yes' or 'no' if you wish to have screenshots for failed test cases
 failedstepscreenshot=yes
-
 #Toggle 'yes' or 'no' if you wish to have video recording for local test execution
 video_record=no
-
 #Toggle 'yes' or 'no' if you wish to have screenshots for local test execution
 takescreenshots=yes
-
 #Wait for the current page to be completely loaded
 active_page_loaded=yes
+#Wait time for elements to be loaded/located
+wait_for_element=20
+#Number of re-tries on test failure
+failure_retries=2
+# send_email_to_users --> yes or no
+# If yes -> then, provide your mail credentials -> src/main/java -> package com.mail.EmailConfig;
+# This Email will be sent using Java mail API
+send_email_to_users=no
+#Set email server
+server=smtp.gmail.com
+#Set port
+port=587
+#Set from email, the user which is sending the email
+from_email_address=email1@example.com
+#Set from password, the password for the from email above
+password=xyz
+#Set to mail, the intended recipient of the email
+to=email1@example.com,email2@example.com,email3@example.com
+#Set email report subject here
+email_subject=Test Automation Reports
 
